--- a/style.css
+++ b/style.css
@@ -55,6 +55,25 @@
 } 
 
 @supports (display: flex) {
+  @media screen and (max-width:576px) {
+    .media2 {
+      width: 95vw;
+      transform: translateY(-25%);
+   }
+  }
+} 
+
+@supports (display: flex) {
+  @media screen and (max-width:480px) {
+    .media2 {
+      width: 95vw;
+      transform: translateY(-25%);
+   }
+  }
+} 
+
+
+@supports (display: flex) {
   @media screen and (max-width:768px) {
     .media3 {
       transform: translateY(-5%);
